fix codeblock wrap issue

--- a/src/styles/quillBased.css
+++ b/src/styles/quillBased.css
@@ -124,4 +124,5 @@
   font-family: monospace;
   padding: 0.8rem !important;
   border-radius: 0.5rem !important;
+  white-space: pre-wrap;
 }
